--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	
 	<td>
 	<td>
-	<iframe src="form.htm" border="0" width="400" height="400"/>
+	<iframe src="form.html" border="0" width="400" height="400"/>
 	</iframe>
 	</td>
 	</td>
