--- a/neomarcos29.html
+++ b/neomarcos29.html
@@ -3,29 +3,32 @@
 <title>Neo Marcos</title>
 <meta name="description" content="Neo Marcos" />
 <meta name="keywords" content="neo, marcos" />
-<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<body>
+<body bgcolor="#eee5de">
 
-
-<div id="container">
-	<!--<table width=800px" align="center" bgcolor="#ffffff" border="0" cellpadding="10">-->
-
-	<!--logo goes here-->
-	<div id="header">
-	<font color="#9b8953" size="7">Neo</font><font color ="#6b4226" size="7">Marcos</font>
-	<!--nav goes here-->
-	</div>
-	<div id="nav">
-	<hr />
-	<p><a class="selected" href="">HOME</a> | <a href="aboutme.html">ABOUT ME</a>
-	<hr />
-	</div>
-	
+<table width=800px" align="center" bgcolor="#ffffff" border="0" cellpadding="10">
+<tr>
 	<td>
-	<div id = "content">
-	<div id = "profile">
+	<!--logo goes here-->
+	<font color="#ff6600" size="7">Neo</font><font color ="#6b4226" size="7"> Marcos</font>
+	</td>
+	<!--nav goes here-->
+	<tr>
+	<td>
+	<p><a href="/">HOME</a> | <a href="aboutus.htm">ABOUT US</a>
+	</td>
+	</tr>
+</tr>
+
+<tr>
+	<td colspan="2">
+	<hr />
+	</td>
+</tr>
+
+<tr>
+	<td>
 	<h1>My Profile</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 	Maecenas sit amet mollis arcu. In sed hendrerit nisi, in viverra turpis.
@@ -39,24 +42,29 @@
 	ipsum sagittis. Phasellus sit amet lectus gravida, feugiat nisi id, aliquam mi.
 	Duis placerat, sem non feugiat commodo, diam sem sollicitudin justo, vel ultrices
 	nulla erat nec nibh. Quisque eu fermentum nisi, et auctor risus.</p>
-	<ul>
+	</td>
+	<td width="410px" height="361px">
+	<!--image here-->
+	<a href="http://neomarcos29.blogspot.com"><img src="neo.jpg" width="410px" height="410px"/></a>
+	</td>
+	<tr>
+		<td>
+		<ul>
 			<li>Quisque eu fermentum nisi, et auctor risus</li>
 			<li>Quisque eu fermentum nisi, et auctor risus</li>
 		</ul>
-	</div>
-	</td>
-	<div id: "image">
-	<!--image here-->
-	<a href="http://neomarcos29.blogspot.com"><img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-0/p526x296/20842249_10155611571334841_7854242887007499413_n.jpg?oh=edc13dad69d610a0e6d27eb179387642&oe=5A316DC5" width="400px" height="400px"/></a>
-	</div>
-	<div id = "survey">
-	<iframe src="form.html" border="0" width="400" height="400"/>
+		</td>
+	</tr>
+	
+	<td>
+	<td>
+	<iframe src="form.htm" border="0" width="400" height="400"/>
 	</iframe>
-	</div>
-	</div>
-	<div id = footer>
-	Copyright &copy; 2017 Neo Marcos.
-	</div>
-</div>
+	</td>
+	</td>
+</tr>
+
+</table>
+
 </body>
 </html>
