--- a/index.html
+++ b/index.html
@@ -4,59 +4,64 @@
 <meta name="description" content="Neo Marcos" />
 <meta name="keywords" content="neo, marcos" />
 <link rel="stylesheet" type="text/css" href="style.css" />
+<script src="jquery-3.2.1.js"></script>
+<script src="app.js"></script>
+<script src="https://use.fontawesome.com/4c093500c8.js"></script>
 </head>
 
 <body>
 
 
-<div id="container">
+<!--div id="container">
 	<!--<table width=800px" align="center" bgcolor="#ffffff" border="0" cellpadding="10">-->
 
 	<!--logo goes here-->
-	<div id="header">
-	<font color="#9b8953" size="7">Neo</font><font color ="#6b4226" size="7">Marcos</font>
-	<!--nav goes here-->
-	</div>
-	<div id="nav">
-	<hr />
-	<p><a class="selected" href="">HOME</a> | <a href="aboutme.html">ABOUT ME</a>
-	<hr />
-	</div>
+
 	
-	<td>
-	<div id = "content">
-	<div id = "profile">
-	<h1>My Profile</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-	Maecenas sit amet mollis arcu. In sed hendrerit nisi, in viverra turpis.
-	Vestibulum pulvinar, sem sit amet gravida ultrices, ligula neque egestas odio,
-	in convallis lectus lorem quis turpis. Donec ac quam ut augue rhoncus cursus 
-	itae a orci. Nam sit amet metus efficitur, cursus diam sit amet, accumsan sem.
-	In aliquet, urna a luctus eleifend, eros purus mattis ex, a tristique libero
-	ligula id nisi. Proin ex purus, volutpat sit amet vestibulum et, congue sit 
-	amet nisl. Donec porta varius feugiat. Quisque nec est dapibus, pharetra dolor 
-	ultrices, aliquam est. Sed laoreet mauris ut purus porta, scelerisque aliquet 
-	ipsum sagittis. Phasellus sit amet lectus gravida, feugiat nisi id, aliquam mi.
-	Duis placerat, sem non feugiat commodo, diam sem sollicitudin justo, vel ultrices
-	nulla erat nec nibh. Quisque eu fermentum nisi, et auctor risus.</p>
-	<ul>
-			<li>Quisque eu fermentum nisi, et auctor risus</li>
-			<li>Quisque eu fermentum nisi, et auctor risus</li>
-		</ul>
+	  <div class="menu">
+	  
+	  <div class="icon-close">
+	  <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png" >
+	  </div>
+	  
+	  
+	  <ul>
+	  <!--Menu-->
+        <li><a href="#">About</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+	  
+	  </div>
+	
+	  <div class="jumbotron">
+
+      <div class="icon-menu">
+        <i class="fa fa-bars"></i>
+        <a href="#">Menu</a>
+      </div>
+	
+	
+	<div class = "content">
+
+	<!--<div class = "image">
+
+	<a href="http://neomarcos29.blogspot.com"><img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-0/p526x296/20842249_10155611571334841_7854242887007499413_n.jpg?oh=edc13dad69d610a0e6d27eb179387642&oe=5A316DC5	" width="400px" height="400px"/></a>
 	</div>
-	</td>
-	<div id: "image">
-	<!--image here-->
-	<a href="http://neomarcos29.blogspot.com"><img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-0/p526x296/20842249_10155611571334841_7854242887007499413_n.jpg?oh=edc13dad69d610a0e6d27eb179387642&oe=5A316DC5" width="400px" height="400px"/></a>
-	</div>
+	-->
+	
 	<div id = "survey">
 	<iframe src="form.html" border="0" width="400" height="400"/>
 	</iframe>
 	</div>
+	
 	</div>
+	
 	<div id = footer>
 	Copyright &copy; 2017 Neo Marcos.
 	</div>
-</div>
+	
+<!--/div-->
 </body>
 </html>
