--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
 	</div>
 	-->
 	
+	<!--
 	<div id = "survey">
 	<iframe src="form.html" border="0" width="400" height="400"/>
 	</iframe>
-	</div>
+	</div>-->
 	
 	</div>
 	
-	<div id = footer>
-	Copyright &copy; 2017 Neo Marcos.
+	Copyright &copy; 2017 Neo Marcos
+	<div class = "footer">
 	</div>
 	
 <!--/div-->
